feat: comprehensive Angular learning hub - best repo to master Angular fundamentals
COMPREHENSIVE ANGULAR LEARNING PLATFORM

Core Features:
- Dynamic Navigation System: Smart routing with active link highlighting
- 17+ Learning Modules: Components, Signals, Services, Routing, Forms, HTTP, RxJS, Decorators
- Lazy-Loaded Routes: Optimized performance with code splitting
- Change Detection Strategies: OnPush optimization for better performance
- HTTP Interceptors: Logging interceptor for request/response monitoring

Angular Concepts Covered:
 Component Architecture (standalone & traditional)
 Property & Event Binding
 Directives (*ngIf, *ngFor, custom directives)
 Pipes (built-in & custom)
 Services & Dependency Injection
 Signals (Angular 14+ reactive state management)
 Content Projection & Template References
 Change Detection Strategies
 Route Guards & Protection
 Reactive Forms & Template Forms
 HTTP Client & Interceptors
 RxJS Operators & Observables
 Decorators (@Component, @Input, @Output, etc.)
 State Management Patterns
 Performance Optimization
 Unit Testing & Testing Strategies

Code Quality:
 Modern Angular Control Flow (@for, @if instead of *ngIf, *ngFor)
 TypeScript Strict Mode Enabled
 Clean Code Architecture
 Zero Compilation Errors
 Optimized Styling (SCSS Variables & Mixins)
 Responsive Design

Project Structure:
- 20 Component Modules with detailed examples
- Services for API calls & state management
- Route Guards for authentication
- Logging Interceptors for HTTP requests
- Theme Switcher for UI customization
- Learning Dashboard with module navigation

Perfect for:
- Angular beginners learning fundamentals
- Developers preparing for Angular interviews
- Teams looking to understand best practices
- Reference implementation for Angular patterns
- Progressive learning from basics to advanced

Technology Stack:
- Angular 21.1.0
- TypeScript 5.9.2
- RxJS 7.8.0
- Standalone Components
- Angular Router
- HTTP Client with Interceptors
- Signals for Reacti

--- a/angular.json
+++ b/angular.json
@@ -6,7 +6,7 @@
   },
   "newProjectRoot": "projects",
   "projects": {
-    "Practice-Application": {
+    "Practice-Angular": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -66,10 +66,10 @@
           "builder": "@angular/build:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "Practice-Application:build:production"
+              "buildTarget": "Practice-Angular:build:production"
             },
             "development": {
-              "buildTarget": "Practice-Application:build:development"
+              "buildTarget": "Practice-Angular:build:development"
             }
           },
           "defaultConfiguration": "development"
